# fastapi-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.docker/: Dockerfile
alembic/: env.py
alembic/versions/: baa9097006be_new_migration.py
app/: backend_pre_start.py  main.py
app/core/: auth.py  logger.py  main_router.py
app/core/db/: mock_session.py  session.py
app/sneakers/: __init__.py  models.py  schema.py  views.py
app/tests/: test_sneakers.py
